# sleepme_thermostat

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/workflows/: test.yml  validate.yml
custom_components/sleepme_thermostat/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  diagnostics.py  helpers.py  manifest.json  sensor.py  sleepme.py  sleepme_api.py  strings.json  update_manager.py
custom_components/sleepme_thermostat/translations/: en.json  es.json
docs/: AUDIT.md  ROADMAP.md  phase-0-foundation.md  phase-1-p0-fixes.md  phase-2-modernization.md  phase-3-climate-refactor.md  phase-4-testing.md  phase-5-polish.md  phase-6-followup.md
tests/: conftest.py  const.py  test_climate.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_helpers.py  test_init.py  test_sleepme.py  test_sleepme_api.py
tests/fixtures/: device_status.json
