[project]
name = "sleepme_thermostat"
version = "0.0.0"
description = "Home Assistant custom integration for SleepMe Dock Pro"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["custom_components", "tests"]
extend-exclude = [
    ".github",
    "docs",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "RUF",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]

[tool.black]
target-version = ["py313"]
line-length = 88
include = '(custom_components/sleepme_thermostat|tests)/.*\.py$'

[tool.mypy]
# mypy supports 3.14 natively even when ruff/black don't yet have py314 targets.
python_version = "3.14"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = true
warn_redundant_casts = true
disable_error_code = ["import-untyped"]
exclude = [
    "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-p", "no:cacheprovider",
]
norecursedirs = [".git", ".github", "custom_components"]

[tool.coverage.run]
source = ["custom_components/sleepme_thermostat"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
