[project]
name = "sleepme_thermostat"
version = "0.0.0"
description = "Home Assistant custom integration for SleepMe Dock Pro"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["custom_components", "tests"]
extend-exclude = [
    ".github",
    "docs",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "RUF",
]
ignore = [
    "E501",  # line length — handled by black
    "B008",  # function calls in arg defaults — common HA pattern
    "E731",  # lambda assignments — climate.py verify-loop; Phase 3 removes it
    "RUF012", # mutable class defaults — HA entity attr pattern (_attr_hvac_modes etc.)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
# Repo-wide. Replaces black.

[tool.mypy]
# mypy supports 3.14 natively even when ruff doesn't yet have a py314 target.
python_version = "3.14"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = true
warn_redundant_casts = true
# Phase 4: tightened. All functions must declare types; strict optional.
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
disable_error_code = ["import-untyped"]
exclude = [
    "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-p", "no:cacheprovider",
]
norecursedirs = [".git", ".github", "custom_components"]

[tool.coverage.run]
source = ["custom_components/sleepme_thermostat"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
